# advent-of-code-2021

./: Cargo.toml  README.md
benches/: bench_day_1.rs  bench_day_12.rs  bench_day_13.rs
day_1/: Cargo.toml
day_1/benches/: bench_day_1.rs
day_1/src/: lib.rs  main.rs
day_10/src/: main.rs
day_11/src/: main.rs
day_12/: Cargo.toml
day_12/benches/: bench_day_12.rs
day_12/src/: lib.rs  main.rs
day_2/src/: main.rs
day_3/src/: main.rs
day_4/src/: main.rs
day_5/src/: main.rs
day_6/src/: main.rs
day_7/src/: main.rs
day_8/src/: main.rs
day_9/src/: main.rs
src/: lib.rs  main.rs
src/day_1/: mod.rs
src/day_10/: mod.rs
src/day_11/: mod.rs
src/day_12/: mod.rs
src/day_13/: mod.rs  print_day_13.rs  silly_input.txt
src/day_14/: mod.rs
src/day_15/: mod.rs
src/day_16/: mod.rs
src/day_17/: mod.rs
src/day_18/: mod.rs
src/day_2/: mod.rs
src/day_3/: mod.rs
src/day_4/: mod.rs
src/day_5/: mod.rs
src/day_6/: mod.rs
src/day_7/: mod.rs
src/day_8/: mod.rs
src/day_9/: mod.rs
